syntax = "proto3";

package project.planton.credential.azurecredential.v1;

import "buf/validate/validate.proto";
import "project/planton/credential/azurecredential/v1/spec.proto";
import "project/planton/shared/metadata.proto";
import "project/planton/shared/status.proto";

//azure-credential
message AzureCredential {
  //api-version
  string api_version = 1 [(buf.validate.field).string.const = 'credential.project-planton.org/v1'];

  //resource-kind
  string kind = 2 [(buf.validate.field).string.const = 'AzureCredential'];

  //metadata
  project.planton.shared.ApiResourceMetadata metadata = 3 [(buf.validate.field).required = true];

  //spec
  AzureCredentialSpec spec = 4;

  //status
  project.planton.shared.ApiResourceAuditStatus status = 5;
}
