syntax = "proto3";

package project.planton.credential.mongodbatlascredential.v1;

import "buf/validate/validate.proto";
import "project/planton/shared/status.proto";
import "project/planton/shared/metadata.proto";
import "project/planton/credential/mongodbatlascredential/v1/spec.proto";

// mongodb-atlas-credential
message MongodbAtlasCredential {
  //api-version
  string api_version = 1 [
    (buf.validate.field).string.const = 'credential.project-planton.org/v1'
  ];

  //resource-kind
  string kind = 2 [
    (buf.validate.field).string.const = 'MongodbAtlasCredential'
  ];

  //metadata
  project.planton.shared.ApiResourceMetadata metadata = 3 [
    (buf.validate.field).required = true
  ];

  //spec
  MongodbAtlasCredentialSpec spec = 4;

  //status
  project.planton.shared.ApiResourceLifecycleAndAuditStatus status = 5;
}
