syntax = "proto3";

package project.planton.provider.aws.ekscluster.v1;

import "project/planton/credential/awscredential/v1/spec.proto";
import "project/planton/provider/aws/ekscluster/v1/api.proto";
import "project/planton/shared/pulumi/pulumi.proto";
import "project/planton/shared/shared.proto";
import "project/planton/shared/terraform/terraform.proto";

//eks-cluster stack-input
message EksClusterStackInput {
  //iac-provisioner
  project.planton.shared.IacProvisioner iac_provisioner = 1;
  //pulumi input required when the iac_provisioner is pulumi
  project.planton.shared.pulumi.PulumiStackInfo pulumi = 2;
  //terraform input required when the iac_provisioner is terraform
  project.planton.shared.terraform.TerraformStackInfo terraform = 3;
  //target api-resource
  EksCluster target = 4;
  //aws-credential
  project.planton.credential.awscredential.v1.AwsCredentialSpec aws_credential = 5;
}
