syntax = "proto3";

package project.planton.provider.confluent.confluentkafka.v1;

import "project/planton/credential/confluentcredential/v1/spec.proto";
import "project/planton/provider/confluent/confluentkafka/v1/api.proto";
import "project/planton/shared/pulumi/pulumi.proto";
import "project/planton/shared/shared.proto";
import "project/planton/shared/terraform/terraform.proto";

//confluent-kafka stack-input
message ConfluentKafkaStackInput {
  //iac-provisioner
  project.planton.shared.IacProvisioner provisioner = 1;
  //pulumi input required when the iac_provisioner is pulumi
  project.planton.shared.pulumi.PulumiStackInfo pulumi = 2;
  //terraform input required when the iac_provisioner is terraform
  project.planton.shared.terraform.TerraformStackInfo terraform = 3;
  //target api-resource
  ConfluentKafka target = 4;
  //confluent-credential
  project.planton.credential.confluentcredential.v1.ConfluentCredentialSpec confluent_credential = 5;
}
