syntax = "proto3";

package project.planton.provider.gcp.gkeaddonbundle.v1;

import "project/planton/credential/gcpcredential/v1/spec.proto";
import "project/planton/credential/kubernetesclustercredential/v1/spec.proto";
import "project/planton/provider/gcp/gkeaddonbundle/v1/api.proto";
import "project/planton/shared/iac/pulumi/pulumi.proto";
import "project/planton/shared/iac/terraform/terraform.proto";
import "project/planton/shared/shared.proto";

//input for gke-addon-bundle stack
message GkeAddonBundleStackInput {
  //iac-provisioner
  project.planton.shared.IacProvisioner provisioner = 1;
  //pulumi input required when the provisioner is pulumi
  project.planton.shared.iac.pulumi.PulumiStackInfo pulumi = 2;
  //terraform input required when the provisioner is terraform
  project.planton.shared.iac.terraform.TerraformStackInfo terraform = 3;
  //target api-resource
  GkeAddonBundle target = 4;
  //gcp-credential
  project.planton.credential.gcpcredential.v1.GcpCredentialSpec gcp_credential = 5;
  //kubernetes-cluster-credential
  project.planton.credential.kubernetesclustercredential.v1.KubernetesClusterCredentialSpec kubernetes_cluster_credential = 6;
}
